<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".ProfileActivity">


    <TextView
        android:id="@+id/first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="28dp"
        android:text="FirstName: Blank"
        android:textColor="@color/matte"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="0dp"
        android:textColor="@color/matte"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Lastname: Blank"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name"/>

    <TextView
        android:id="@+id/holder"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent" />



    <TextView
        android:id="@+id/holder01"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent" />

    <TextView
        android:id="@+id/birthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="Birthday: Blank"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/mauve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Login/Sign Up"
        android:textStyle="bold"
        android:backgroundTint="@color/mutedBlue"
        android:onClick="rerouteToSignIn"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="120dp"
        android:src="@drawable/village"
        android:layout_height="120dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/guidelinePicLeft"
        app:layout_constraintTop_toBottomOf="@id/guidelinePicStart"
         />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:onClick="rerouteToSignIn"
        android:text="Log Out"
        android:textStyle="bold"
        android:backgroundTint="@color/mutedBlue"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name"
        app:layout_constraintVertical_bias="0.094" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePicStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePicLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".6" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".9" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="wrap_content"
        android:layout_height="@id/guideline"
        android:gravity="center_horizontal"
        android:background="@color/lightBlue"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"/>


    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
                android:layout_width="match_parent"
                android:background="@color/mutedBlue"
                android:layout_height="wrap_content"
                app:menu="@menu/navigation_menu" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>