...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:layout_marginTop="196dp"
        android:hint="Username"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
...
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="317dp"
        android:layout_height="48dp"

        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
...
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2"
        android:onClick="authenticateSignIn"
        />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/mutedBlue"
...
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="EventMe"
        android:gravity="center"
        android:textColor="@color/matte"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log In"
        android:textColor="@color/mutedBlue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <Button
        android:id="@+id/Guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guest"
        android:textStyle="bold"
        android:backgroundTint="@color/mauve"
        app:layout_constraintBottom_toBottomOf="parent"
...
