<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <item
        android:id="@+id/map"
        android:enabled="true"
        android:icon="@drawable/map"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/explore"
        android:enabled="true"
        android:icon="@drawable/search"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/profile"
        tools:ignore="MenuTitle" />

</menu>